--- a/package.json
+++ b/package.json
@@ -9,11 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.7.9",
     "clsx": "^2.1.1",
+    "mongoose": "^8.9.3",
+    "motion": "^11.16.0",
     "next": "15.1.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "tailwind-merge": "^2.6.0"
+    "react-toastify": "^11.0.2",
+    "tailwind-merge": "^2.6.0",
+    "universal-cookie": "^7.2.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
